Support when fts needs link flags

--- a/ctypes.opam
+++ b/ctypes.opam
@@ -33,6 +33,7 @@ depends: [
   "bigarray-compat"
   "ounit" {with-test}
   "conf-fts" {with-test & os != "win32"}
+  "conf-pkg-config" {with-test}
   "odoc" {with-doc}
 ]
 build: [
