--- a/ctypes-foreign.opam
+++ b/ctypes-foreign.opam
@@ -13,7 +13,7 @@ homepage: "https://github.com/ocamllabs/ocaml-ctypes"
 doc: "https://ocamllabs.github.io/ocaml-ctypes/"
 bug-reports: "https://github.com/ocamllabs/ocaml-ctypes/issues"
 depends: [
-  "dune" {>= "2.8"}
+  "dune" {>= "2.9"}
   "ocaml" {>= "4.03.0"}
   "ctypes" {= version}
   "dune-configurator"
@@ -34,10 +34,12 @@ build: [
     name
     "-j"
     jobs
+    "--promote-install-files=false"
     "@install"
     "@runtest" {with-test}
     "@doc" {with-doc}
   ]
+  ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/ocamllabs/ocaml-ctypes.git"
 post-messages: "This package requires libffi on your system" {failure}
