--- a/ctypes.opam
+++ b/ctypes.opam
@@ -11,7 +11,7 @@ can use these combinators to describe the types of the functions that you want
 to call, then bind directly to those functions -- all without writing or
 generating any C!
 
-To install the optional `ctypes.foreign` interface (which uses `libffi` to
+To install the optional `ctypes-foreign` interface (which uses `libffi` to
 provide dynamic access to foreign libraries), you will need to also install
 the `ctypes-foreign` package.
 
@@ -26,7 +26,7 @@ homepage: "https://github.com/ocamllabs/ocaml-ctypes"
 doc: "https://ocamllabs.github.io/ocaml-ctypes/"
 bug-reports: "https://github.com/ocamllabs/ocaml-ctypes/issues"
 depends: [
-  "dune" {>= "2.8"}
+  "dune" {>= "2.9"}
   "ocaml" {>= "4.03.0"}
   "integers"
   "dune-configurator"
@@ -45,9 +45,11 @@ build: [
     name
     "-j"
     jobs
+    "--promote-install-files=false"
     "@install"
     "@runtest" {with-test}
     "@doc" {with-doc}
   ]
+  ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/ocamllabs/ocaml-ctypes.git"
