--- a/hdr_histogram.opam
+++ b/hdr_histogram.opam
@@ -5,7 +5,7 @@ description: "OCaml bindings to Hdr Histogram"
 maintainer: ["KC Sivaramakrishnan"]
 authors: ["KC Sivaramakrishnan"]
 license: "MIT"
-tags: ["topics" "histogram" "tail latency"]
+tags: ["histogram" "tail latency"]
 homepage: "https://github.com/kayceesrk/hdr_histogram_ocaml"
 doc: "https://url/to/documentation"
 bug-reports: "https://github.com/kayceesrk/hdr_histogram_ocaml/issues"
