--- a/hdr_histogram.opam
+++ b/hdr_histogram.opam
@@ -14,6 +14,7 @@ depends: [
   "dune" {>= "3.3"}
   "ctypes" {>= "0.20.1"}
   "ctypes-foreign" {>= "0.18.0"}
+  "conf-pkg-config" {build}
   "odoc" {with-doc}
 ]
 build: [
