--- a/hdr_histogram.opam
+++ b/hdr_histogram.opam
@@ -7,7 +7,7 @@ authors: ["KC Sivaramakrishnan"]
 license: "MIT"
 tags: ["histogram" "tail latency"]
 homepage: "https://github.com/kayceesrk/hdr_histogram_ocaml"
-doc: "https://url/to/documentation"
+doc: "https://kayceesrk.github.io/hdr_histogram_ocaml/"
 bug-reports: "https://github.com/kayceesrk/hdr_histogram_ocaml/issues"
 depends: [
   "ocaml"
