--- a/hdr_histogram.opam
+++ b/hdr_histogram.opam
@@ -15,6 +15,8 @@ depends: [
   "ctypes" {>= "0.20.1"}
   "ctypes-foreign" {>= "0.18.0"}
   "conf-pkg-config" {build}
+  "conf-cmake" {build}
+  "conf-zlib"
   "odoc" {with-doc}
 ]
 build: [
