Build with fPIC
Older GNU toolchains will complain about static linking (fedora34 and friends).

--- a/lib/libhdr_histogram/CMakeLists.txt
+++ b/lib/libhdr_histogram/CMakeLists.txt
@@ -45,6 +45,7 @@ if(UNIX)
         -Wshadow
         -Winit-self
         -Wpedantic
+	-fPIC
         $<$<COMPILE_LANGUAGE:C>:-Wmissing-prototypes>)
     add_definitions(-D_GNU_SOURCE)
 endif()
