Curb to ocaml >= 4.08

--- a/hdr_histogram.opam
+++ b/hdr_histogram.opam
@@ -10,7 +10,7 @@ homepage: "https://github.com/ocaml-multicore/hdr_histogram_ocaml"
 doc: "https://ocaml-multicore.github.io/hdr_histogram_ocaml"
 bug-reports: "https://github.com/ocaml-multicore/hdr_histogram_ocaml/issues"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.08"}
   "dune" {>= "3.3"}
   "ctypes" {>= "0.20.1"}
   "ctypes-foreign" {>= "0.18.0"}
