update dune version

--- a/eio-ssl.opam
+++ b/eio-ssl.opam
@@ -7,14 +7,15 @@ license: "LGPL with OpenSSL linking exception"
 homepage: "https://github.com/anmonteiro/eio-ssl"
 bug-reports: "https://github.com/anmonteiro/eio-ssl/issues"
 depends: [
-  "dune" {>= "2.0"}
+  "dune" {>= "2.7"}
   "ocaml" {>= "5.0"}
   "ssl" {>= "0.5.13"}
   "eio"
   "eio_main"
+  "odoc" {with-doc}
 ]
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   [
     "dune"
     "build"
