--- a/magic-mime.opam
+++ b/magic-mime.opam
@@ -28,6 +28,6 @@ depends: [
   "dune"
 ]
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   ["dune" "build" "-p" name "-j" jobs]
 ]
