--- a/lib/ctypes/src/ctypes/dune
+++ b/lib/ctypes/src/ctypes/dune
@@ -14,7 +14,7 @@
  (name ctypes)
  (public_name ctypes)
  (wrapped false)
- (libraries bytes integers bigarray-compat)
+ (libraries integers bigarray-compat)
  (modules_without_implementation ctypes_types)
  (instrumentation
   (backend bisect_ppx))
