--- a/eio.opam
+++ b/eio.opam
@@ -18,7 +18,7 @@ depends: [
   "psq" {>= "0.2.0"}
   "fmt" {>= "0.8.9"}
   "hmap" {>= "0.8.1"}
-  "astring" {>= "0.8.5" & with-test}
+  "astring" {>= "0.8.5"}
   "crowbar" {>= "0.2" & with-test}
   "mtime" {>= "1.2.0"}
   "alcotest" {>= "1.4.0" & with-test}
