--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,5 @@ jobs:
         with:
           push: true
           tags: avsm/eeww:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
