ppxlib: remove benchmarks as the vendoring doesnt nest
also remove need for stdlib-shims

--- a/lib/ppxlib/stdppx/dune
+++ b/lib/ppxlib/stdppx/dune
@@ -1,6 +1,6 @@
 (library
  (name stdppx)
  (public_name ppxlib.stdppx)
- (libraries sexplib0 stdlib-shims)
+ (libraries sexplib0)
  (flags
   (:standard -safe-string)))
