--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,13 @@
 (executable
  (name main)
  (public_name eeww)
+ (modules main)
  (libraries cohttp-eio eio_main eio.unix eio uri fpath magic-mime))
+
+(executable
+ (name fetch)
+ (public_name eeww-fetch)
+ (modules fetch)
+ (libraries cohttp-eio eio_main eio.unix eio tls tls-eio mirage-crypto-rng-eio))
+
+
