--- a/lib_eio_gcd/dune
+++ b/lib_eio_gcd/dune
@@ -5,5 +5,9 @@
 (library
  (name eio_gcd)
  (public_name eio_gcd)
+ (c_library_flags -framework Security)
  (enabled_if (= %{system} "macosx"))
+ (foreign_stubs
+  (language c)
+  (names eio_gcd_stubs))
  (libraries eio gcd network eio.utils eio.unix unix logs fmt bigstringaf))
