--- a/mtime.opam
+++ b/mtime.opam
@@ -23,10 +23,8 @@ homepage: "https://erratique.ch/software/mtime"
 doc: "https://erratique.ch/software/mtime/doc/"
 bug-reports: "https://github.com/dbuenzli/mtime/issues"
 depends: [
+  "dune"  {>= "3.5.0"}
   "ocaml" {>= "4.08.0"}
-  "ocamlfind" {build}
-  "ocamlbuild" {build & != "0.9.0"}
-  "topkg" {build & >= "1.0.3"}
 ]
-build: ["ocaml" "pkg/pkg.ml" "build" "--dev-pkg" "%{dev}%"]
-dev-repo: "git+https://erratique.ch/repos/mtime.git"
+build: [ "dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} ]
+dev-repo: "git+https://github.com/dune-universe/mtime.git#duniverse-master"
