--- a/lib/eio/lib_main/dune
+++ b/lib/eio/lib_main/dune
@@ -3,5 +3,6 @@
   (public_name eio_main)
   (libraries 
              (select eio_main.ml from
+              (eio_gcd -> eio_main.gcd.ml)
               (eio_linux -> eio_main.linux.ml)
               (          -> eio_main.default.ml))))
