letsencrypt: jury-rig support for https fetches

--- a/lib/letsencrypt/src/dune
+++ b/lib/letsencrypt/src/dune
@@ -3,4 +3,4 @@
 (library
  (name letsencrypt)
  (public_name letsencrypt)
- (libraries http cohttp-eio eio eio.unix logs yojson base64 mirage-crypto mirage-crypto-pk mirage-crypto-ec asn1-combinators x509 uri))
+ (libraries http cohttp-eio eio eio.unix logs yojson base64 mirage-crypto mirage-crypto-pk mirage-crypto-ec asn1-combinators x509 uri tls-eio))
