--- a/lib/eio/lib_main/dune
+++ b/lib/eio/lib_main/dune
@@ -1,7 +1,7 @@
 (library
   (name eio_main)
   (public_name eio_main)
-  (libraries eio_luv
+  (libraries
              (select eio_main.ml from
               (eio_linux -> eio_main.linux.ml)
               (eio_gcd   -> eio_main.macos.ml)
