--- a/lib/eio/lib_eio/core/dune
+++ b/lib/eio/lib_eio/core/dune
@@ -1,4 +1,4 @@
 (library
   (name eio__core)
   (public_name eio.core)
-  (libraries astring cstruct hmap lwt-dllist fmt runtime_events))
+  (libraries astring cstruct hmap lwt-dllist fmt optint runtime_events))
