--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
         run: brew install cmake gmp
       -
         name: Build
-        run: make
+        run: env DUNE_PROFILE=release make
