--- a/dune
+++ b/dune
@@ -1,1 +1,8 @@
 (data_only_dirs boot)
+
+(env
+  (dev
+    (flags (:standard)))
+  (release
+    (flags (:standard -cclib -static -cclib -no-pie))
+    (ocamlopt_flags (:standard -O3))))
