eio_kqueue: initial import of kqueue backend

--- a/lib/eio/dune-project
+++ b/lib/eio/dune-project
@@ -52,6 +52,15 @@
   (mdx (and (>= 1.10.0) :with-test))
   (fmt (>= 0.8.9))))
 (package
+ (name eio_kqueue)
+ (synopsis "Eio implementation using kqueue")
+ (description "An eio implementation for BSD-platforms, using kqueue.")
+ (depends
+  (eio (= :version))
+  kqueue
+  (mdx (and (>= 1.10.0) :with-test))
+  (fmt (>= 0.8.9))))
+(package
  (name eio_gcd)
  (synopsis "Eio implementation using GCD")
  (description "An eio implementation for most platforms, using gcd.")
