--- a/lib/eio/lib_main/dune
+++ b/lib/eio/lib_main/dune
@@ -4,5 +4,5 @@
   (libraries
              (select eio_main.ml from
               (eio_linux -> eio_main.linux.ml)
-              (eio_gcd   -> eio_main.macos.ml)
+              (eio_kqueue -> eio_main.bsd.ml)
               (          -> eio_main.default.ml))))
