--- a/lib/eio/dune-project
+++ b/lib/eio/dune-project
@@ -1,4 +1,4 @@
-(lang dune 3.0)
+(lang dune 3.7)
 (name eio)
 (formatting disabled)
 (generate_opam_files true)
@@ -33,7 +33,7 @@
 (package
  (name eio_linux)
  (synopsis "Eio implementation for Linux using io-uring")
- (description "An eio implementation for Linux using io-uring.")
+ (description "An Eio implementation for Linux using io-uring.")
  (depends
   (alcotest (and (>= 1.4.0) :with-test))
   (eio (= :version))
@@ -43,9 +43,18 @@
   (cmdliner (and (>= 1.1.0) :with-test))
   (uring (>= 0.5))))
 (package
+ (name eio_posix)
+ (synopsis "Eio implementation for POSIX systems")
+ (description "An Eio implementation for most Unix-like platforms")
+ (depends
+  (eio (= :version))
+  (iomux (>= 0.2))
+  (mdx (and (>= 1.10.0) :with-test))
+  (fmt (>= 0.8.9))))
+(package
  (name eio_luv)
  (synopsis "Eio implementation using luv (libuv)")
- (description "An eio implementation for most platforms, using luv.")
+ (description "An Eio implementation for most platforms, using luv.")
  (depends
   (eio (= :version))
   (luv (>= 0.5.11))
@@ -76,8 +85,10 @@
  (name eio_main)
  (synopsis "Effect-based direct-style IO mainloop for OCaml")
  (description "Selects an appropriate Eio backend for the current platform.")
+ (depopts eio_luv)
  (depends
-  (eio_linux (and (= :version) (= :os "linux")))
   (mdx (and (>= 1.10.0) :with-test))
-  (eio_luv (= :version))))
+  (eio_linux (and (= :version) (= :os "linux")))
+  (eio_posix (and (= :version) (<> :os "windows")))
+  (eio_luv (and (= :version) (or (= :os "windows") :with-test)))))
 (using mdx 0.2)
