--- a/lib/eio/eio_main.opam
+++ b/lib/eio/eio_main.opam
@@ -9,12 +9,14 @@ homepage: "https://github.com/ocaml-multicore/eio"
 doc: "https://ocaml-multicore.github.io/eio/"
 bug-reports: "https://github.com/ocaml-multicore/eio/issues"
 depends: [
-  "dune" {>= "3.0"}
-  "eio_linux" {= version & os = "linux"}
+  "dune" {>= "3.7"}
   "mdx" {>= "1.10.0" & with-test}
-  "eio_luv" {= version}
+  "eio_linux" {= version & os = "linux"}
+  "eio_posix" {= version & os != "windows"}
+  "eio_luv" {= version & os = "windows" | with-test}
   "odoc" {with-doc}
 ]
+depopts: ["eio_luv"]
 build: [
   ["dune" "subst"] {dev}
   [
